# TensionForge

./: .gitignore  README.md  linear_training_receipt.json  matmul_bench.py  pyproject.toml  requirements.txt  rx480_smoke.py
docs/: ten_son_bridge_v0_map.md  ten_son_training_bridge_v1_map.md  ten_son_training_bridge_v2_plan.md
experiments/: composable_tension_cell_training.py  device_resident_linear.py  device_resident_linear_backward.py  device_resident_linear_training.py  device_resident_recurrent_backward.py  device_resident_tension_ops.py  fused_tension_pipeline.py  nonlinear_train.py  runtime_linear.py  runtime_matmul.py  runtime_saxpy.py  ten_son_cpu_gpu_benchmark.py  ten_son_forward_parity.py  ten_son_training_common.py  ten_son_training_step_parity.py  ten_son_training_trajectory_parity.py  tension_cell_train.py
receipts/: composable_tension_cell_training_receipt.json  device_resident_linear_backward_receipt.json  device_resident_linear_receipt.json  device_resident_recurrent_backward_receipt.json  device_resident_tension_ops_receipt.json  device_resident_training_receipt.json  fused_tension_pipeline_receipt.json  matmul_receipt.json  nonlinear_training_receipt.json  runtime_linear_receipt.json  runtime_matmul_receipt.json  runtime_saxpy_receipt.json  ten_son_forward_parity_receipt.json  ten_son_training_step_parity_receipt.json  ten_son_training_trajectory_benchmark_receipt.json  tension_cell_training_receipt.json
tensionforge/: __init__.py  device.py  receipts.py  runtime.py  tensor.py
tests/: linear_train.py  test_composable_tension_cell.py  (+19 more)
(+19 files in other folders)
